kubernetes-app.yml
apiVersion: v1
kind: Namespace
metadata:
  name: remla23-team10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: remla23-team10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: ghcr.io/remla23-team10/app
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modelservice-deployment
  namespace: remla23-team10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modelservice
  template:
    metadata:
      labels:
        app: modelservice
    spec:
      containers:
        - name: modelservice
          image: ghcr.io/remla23-team10/model-service
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: remla23-team10
spec:
  selector:
    app: app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  # type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: modelservice-service
  namespace: remla23-team10
spec:
  selector:
    app: modelservice
  ports:
    - name: http
      port: 80
      targetPort: 8080
  # type: ClusterIP    
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: remla23-team10
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        number: 8080
